--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -12,28 +13,33 @@
       backdrop-filter: blur(10px);
       background: rgba(255, 255, 255, 0.7);
     }
+
     /* tilt effect */
     .tilt {
       transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
+
     .tilt:hover {
       transform: translateY(-5px) scale(1.02);
-      box-shadow: 0 10px 20px rgba(0,0,0,0.15);
+      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
     }
   </style>
 </head>
+
 <body class="bg-gradient-to-br from-gray-50 to-blue-100 text-gray-900 font-sans">
   <!-- navbar -->
   <nav class="glass shadow-md sticky top-0 z-50">
     <div class="max-w-5xl mx-auto px-4 py-4 flex justify-between items-center">
       <h1 class="text-xl sm:text-2xl font-bold text-blue-600">🚀 My Projects</h1>
-      <a href="https://github.com/YOURUSERNAME" target="_blank" class="text-gray-700 hover:text-blue-600 text-sm sm:text-base">GitHub ↗</a>
+      <a href="https://github.com/YOURUSERNAME" target="_blank"
+        class="text-gray-700 hover:text-blue-600 text-sm sm:text-base">GitHub ↗</a>
     </div>
   </nav>
 
   <!-- hero -->
   <section class="max-w-5xl mx-auto px-4 py-16 sm:py-24 text-center">
-    <h2 class="text-4xl sm:text-5xl font-extrabold mb-4 bg-gradient-to-r from-blue-600 to-purple-600 bg-clip-text text-transparent animate-pulse">
+    <h2
+      class="text-4xl sm:text-5xl font-extrabold mb-4 bg-gradient-to-r from-blue-600 to-purple-600 bg-clip-text text-transparent animate-pulse">
       Welcome to the Gallery of Frank.
     </h2>
     <p class="text-base sm:text-lg text-gray-700 max-w-xl mx-auto">
@@ -48,13 +54,17 @@
   <section class="max-w-5xl mx-auto px-4 grid gap-6 sm:gap-8 sm:grid-cols-2 lg:grid-cols-3">
     <!-- plcholder proj. card -->
     <div class="bg-white rounded-2xl shadow-md overflow-hidden tilt">
-      <img src="https://placehold.co/600x400" alt="Project preview" class="w-full h-40 object-cover sm:h-48">
+      <img src="https://placehold.co/600x400?text=Particle+Effect" alt="Project preview"
+        class="w-full h-40 object-cover sm:h-48">
       <div class="p-4">
-        <h3 class="text-lg font-semibold">Project One</h3>
-        <p class="text-gray-600 text-sm sm:text-base">Short description about what this project does.</p>
+        <h3 class="text-lg font-semibold">Particle Background</h3>
+        <p class="text-gray-600 text-sm sm:text-base">
+          An interactive particle animation that responds to your mouse or touch.
+        </p>
         <div class="mt-3 flex gap-3">
-          <a href="https://github.com/YOURUSERNAME/PROJECT1" target="_blank" class="text-blue-600 hover:underline text-sm">Code</a>
-          <a href="https://yourprojectdemo.com" target="_blank" class="text-blue-600 hover:underline text-sm">Demo</a>
+          <a href="https://github.com/YOURUSERNAME/portfolio/blob/main/particle.html" target="_blank"
+            class="text-blue-600 hover:underline text-sm">Code</a>
+          <a href="particle.html" target="_blank" class="text-blue-600 hover:underline text-sm">Demo</a>
         </div>
       </div>
     </div>
@@ -90,4 +100,5 @@
     });
   </script>
 </body>
+
 </html>
