--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <nav class="glass shadow-md sticky top-0 z-50">
     <div class="max-w-5xl mx-auto px-4 py-4 flex justify-between items-center">
       <h1 class="text-xl sm:text-2xl font-bold text-blue-600">🚀 My Projects</h1>
-      <a href="https://github.com/YOURUSERNAME" target="_blank"
+      <a href="https://github.com/frankmstrocchio" target="_blank"
         class="text-gray-700 hover:text-blue-600 text-sm sm:text-base">GitHub ↗</a>
     </div>
   </nav>
