--- a/particle.html
+++ b/particle.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>neon particle playground</title>
+  <title>String Thing</title>
   <style>
     html,
     body {
@@ -13,13 +13,13 @@
       background: #000;
       overflow: hidden;
       font-family: sans-serif;
+      transition: background 0.5s;
     }
 
     canvas {
       display: block;
     }
 
-    /* settings boxes */
     .settings {
       position: fixed;
       bottom: 20px;
@@ -41,7 +41,6 @@
       cursor: pointer;
       transition: transform 0.3s, background 0.3s;
       border: 3px solid white;
-      /* thick white border */
       box-shadow: 0 0 5px rgba(255, 255, 255, 0.1);
       position: relative;
       overflow: hidden;
@@ -72,7 +71,6 @@
   </div>
 
   <script>
-    // main canvas setup
     const canvas = document.getElementById('canvas');
     const ctx = canvas.getContext('2d');
     let W = canvas.width = window.innerWidth;
@@ -82,85 +80,96 @@
     window.addEventListener('mousemove', e => { mouse.x = e.x; mouse.y = e.y; });
     window.addEventListener('touchmove', e => { mouse.x = e.touches[0].clientX; mouse.y = e.touches[0].clientY; });
 
-    // particle class
+    // color schemes
+    const schemes = [
+      { bg: '#111', hueShift: 0, sat: 100, light: 50 }, // pastel
+      { bg: '#000', hueShift: 0, sat: 100, light: 50 }, // black neon
+      { bg: '#000', hueShift: 120, sat: 100, light: 50 } // matrix green
+    ];
+    let currentScheme = 0;
+
+    document.getElementById('box1').onclick = () => { currentScheme = 0; document.body.style.background = schemes[0].bg };
+    document.getElementById('box2').onclick = () => { currentScheme = 1; document.body.style.background = schemes[1].bg };
+    document.getElementById('box3').onclick = () => { currentScheme = 2; document.body.style.background = schemes[2].bg };
+
     class Particle {
-      constructor() { this.reset(); }
+      constructor() { this.reset(); this.active = false; }
       reset() {
-        this.x = Math.random() * W;
-        this.y = Math.random() * H;
+        this.x = Math.random() * W; this.y = Math.random() * H;
         this.radius = Math.random() * 2 + 1;
-        this.dx = (Math.random() - 0.5) * 1.5;
-        this.dy = (Math.random() - 0.5) * 1.5;
+        this.dx = (Math.random() - 0.5) * 1.5; this.dy = (Math.random() - 0.5) * 1.5;
         this.hue = Math.random() * 360;
       }
       draw(ctx) {
         ctx.beginPath();
         ctx.arc(this.x, this.y, this.radius, 0, Math.PI * 2);
-        ctx.fillStyle = `hsl(${this.hue},100%,50%)`;
-        ctx.shadowBlur = 8;
-        ctx.shadowColor = `hsl(${this.hue},100%,50%)`;
+        ctx.fillStyle = `hsl(${(this.hue + schemes[currentScheme].hueShift) % 360},${schemes[currentScheme].sat}%,${schemes[currentScheme].light}%)`;
+        ctx.shadowBlur = 3;
+        ctx.shadowColor = ctx.fillStyle;
         ctx.fill();
       }
       update() {
-        this.x += this.dx;
-        this.y += this.dy;
-        this.hue += 0.5;
-        if (this.x < 0 || this.x > W) this.dx *= -1;
-        if (this.y < 0 || this.y > H) this.dy *= -1;
-        if (mouse.x && mouse.y) {
+        // activate if mouse nearby
+        const sleepDist = 150;
+        if (mouse.x !== null && mouse.y !== null) {
           const dx = this.x - mouse.x;
           const dy = this.y - mouse.y;
-          const dist = Math.sqrt(dx * dx + dy * dy);
-          if (dist < 50) { this.x += dx / dist * 0.8; this.y += dy / dist * 0.8; }
+          const distSq = dx * dx + dy * dy;
+          this.active = distSq < sleepDist * sleepDist;
+        }
+        if (this.active) {
+          this.x += this.dx; this.y += this.dy; this.hue += 0.5;
+          if (this.x < 0 || this.x > W) this.dx *= -1;
+          if (this.y < 0 || this.y > H) this.dy *= -1;
         }
       }
     }
 
-    // create main particles
     let particles = [];
     for (let i = 0; i < 200; i++) particles.push(new Particle());
 
-    // main animation
     function animate() {
-      ctx.fillStyle = 'rgba(0,0,0,0.1)';
+      ctx.fillStyle = `rgba(0,0,0,0.1)`;
       ctx.fillRect(0, 0, W, H);
 
-      particles.forEach(p => {
+      for (let i = 0; i < particles.length; i++) {
+        let p = particles[i];
         p.update();
         p.draw(ctx);
-        // lines
-        particles.forEach(o => {
-          const dx = p.x - o.x; const dy = p.y - o.y;
-          const dist = Math.sqrt(dx * dx + dy * dy);
-          if (dist < 100) {
-            ctx.strokeStyle = `hsla(${p.hue},100%,50%,${1 - dist / 100})`;
+
+        for (let j = i + 1; j < particles.length; j++) { // only upper triangle
+          let o = particles[j];
+          const dx = p.x - o.x;
+          const dy = p.y - o.y;
+          const distSq = dx * dx + dy * dy;
+          const maxDist = 100;
+          if (distSq < maxDist * maxDist) {
+            ctx.strokeStyle = `hsla(${(p.hue + schemes[currentScheme].hueShift) % 360},${schemes[currentScheme].sat}%,${schemes[currentScheme].light}%,${1 - distSq / (maxDist * maxDist)})`;
             ctx.lineWidth = 0.8;
             ctx.beginPath();
             ctx.moveTo(p.x, p.y);
             ctx.lineTo(o.x, o.y);
             ctx.stroke();
           }
-        });
-      });
+        }
+      }
 
       requestAnimationFrame(animate);
     }
     animate();
 
-    // resize
     window.addEventListener('resize', () => { W = canvas.width = window.innerWidth; H = canvas.height = window.innerHeight; });
 
-    // mini canvas setup
     function createMini(id) {
       const c = document.getElementById(id);
       const ct = c.getContext('2d');
       c.width = c.offsetWidth; c.height = c.offsetHeight;
       const parts = [];
-      for (let i = 0; i < 15; i++) {
+      for (let i = 0; i < 10; i++) { // smaller particle count for mini
         parts.push({
           x: Math.random() * c.width, y: Math.random() * c.height,
-          dx: (Math.random() - 0.5) * 1.2, dy: (Math.random() - 0.5) * 1.2,
-          radius: Math.random() * 1.5 + 0.5, hue: Math.random() * 360
+          dx: (Math.random() - 0.5) * 0.5, dy: (Math.random() - 0.5) * 0.5,
+          radius: Math.random() * 1 + 0.5, hue: Math.random() * 360
         });
       }
       function drawMini() {
@@ -172,7 +181,7 @@
           ct.beginPath();
           ct.arc(p.x, p.y, p.radius, 0, Math.PI * 2);
           ct.fillStyle = `hsl(${p.hue},100%,50%)`;
-          ct.shadowBlur = 4; ct.shadowColor = `hsl(${p.hue},100%,50%)`;
+          ct.shadowBlur = 2; ct.shadowColor = ct.fillStyle;
           ct.fill();
         });
         requestAnimationFrame(drawMini);
@@ -180,14 +189,7 @@
       drawMini();
     }
 
-    // create mini animations for each box
-    createMini('mini1');
-    createMini('mini2');
-    createMini('mini3');
-
-    // comments: chill lowercase, no caps
-    // main particles: neon rgb glow
-    // settings boxes: live mini demos inside
+    createMini('mini1'); createMini('mini2'); createMini('mini3');
   </script>
 </body>
 
