added second project and photo in resources. if broken rewrite tessarect link to latest repo i may have not thrown in the right one

--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
 
     <!-- placeholder card -->
     <div class="bg-white rounded-2xl shadow-md overflow-hidden tilt">
-      <img src="https://placehold.co/600x400" alt="Project preview" class="w-full h-40 object-cover sm:h-48">
+      <img src="resources/EvilBorger.png" alt="McDonalds Scanner" class="w-full h-40 object-cover sm:h-48">
       <div class="p-4">
-        <h3 class="text-lg font-semibold">Project Two Coming When I Get Bored Again.</h3>
-        <p class="text-gray-600 text-sm sm:text-base">It's gonna be so cool.</p>
+        <h3 class="text-lg font-semibold">McDonald's Receipt Scanner</h3>
+        <p class="text-gray-600 text-sm sm:text-base">Working prototype of a bigger project for a corporate client.</p>
         <div class="mt-3 flex gap-3">
           <a href="#" class="text-blue-600 hover:underline text-sm">Code</a>
           <a href="#" class="text-blue-600 hover:underline text-sm">Try it!</a>
