--- a/index.html
+++ b/index.html
@@ -98,34 +98,37 @@
     </a>
 
     <!-- placeholder card -->
-    <div class="bg-white rounded-2xl shadow-md overflow-hidden tilt">
-      <img src="resources/EvilBorger.png" alt="McDonalds Scanner" class="w-full h-40 object-cover sm:h-48">
-      <div class="p-4">
-        <h3 class="text-lg font-semibold">McDonald's Receipt Scanner</h3>
-        <p class="text-gray-600 text-sm sm:text-base">Working prototype of a bigger project for a corporate client.</p>
-        <div class="mt-3 flex gap-3">
-          <a href="#" class="text-blue-600 hover:underline text-sm">Code</a>
-          <a href="#" class="text-blue-600 hover:underline text-sm">Try it!</a>
+    <a href="mcdonalds.html" targer="blank" class="group relative block">
+      <div class="bg-white rounded-2xl shadow-md overflow-hidden tilt">
+        <img src="resources/EvilBorger.png" alt="McDonalds Scanner" class="w-full h-40 object-cover sm:h-48">
+        <div class="p-4">
+          <h3 class="text-lg font-semibold">McDonald's Receipt Scanner</h3>
+          <p class="text-gray-600 text-sm sm:text-base">Working prototype of a bigger project for a corporate client.
+          </p>
+          <div class="mt-3 flex gap-3">
+            <a href="#" class="text-blue-600 hover:underline text-sm">Code</a>
+            <a href="#" class="text-blue-600 hover:underline text-sm">Try it!</a>
+          </div>
         </div>
       </div>
-    </div>
   </section>
+  <a>
 
-  <!-- footer -->
-  <footer class="text-center py-8 text-gray-500 text-sm mt-12">
-    © 2025 Frank M Strocchio · Built on 2 packs of ramen and a dream
-  </footer>
+    <!-- footer -->
+    <footer class="text-center py-8 text-gray-500 text-sm mt-12">
+      © 2025 Frank M Strocchio · Built on 2 packs of ramen and a dream
+    </footer>
 
-  <!-- scroll reveal -->
-  <script>
-    ScrollReveal().reveal('section, .tilt', {
-      delay: 100,
-      distance: '20px',
-      origin: 'bottom',
-      duration: 700,
-      interval: 150
-    });
-  </script>
+    <!-- scroll reveal -->
+    <script>
+      ScrollReveal().reveal('section, .tilt', {
+        delay: 100,
+        distance: '20px',
+        origin: 'bottom',
+        duration: 700,
+        interval: 150
+      });
+    </script>
 </body>
 
 </html>
