--- a/index.html
+++ b/index.html
@@ -97,22 +97,32 @@
       </div>
     </a>
 
-    <!-- placeholder card -->
-    <a href="mcdonalds.html" targer="blank" class="group relative block">
-      <div class="bg-white rounded-2xl shadow-md overflow-hidden tilt">
-        <img src="resources/EvilBorger.png" alt="McDonalds Scanner" class="w-full h-40 object-cover sm:h-48">
+    <!-- McDonalds card -->
+    <a href="mcdonalds.html" target="_blank" class="group relative block">
+      <div
+        class="relative bg-white rounded-2xl shadow-md overflow-hidden tilt transform transition duration-300 group-hover:scale-105 group-hover:shadow-xl">
+    
+        <!-- Neon racing border -->
+        <div class="absolute inset-0 pointer-events-none">
+          <div
+            class="absolute inset-0 rounded-2xl before:content-[''] before:absolute before:inset-0 before:rounded-2xl before:border-4 before:border-transparent before:transition-opacity before:duration-300 before:bg-[conic-gradient(from_0deg,_#f00,_#ff0,_#0f0,_#0ff,_#00f,_#f0f,_#f00)] before:blur-lg before:opacity-0 group-hover:before:opacity-90 before:animate-neon-race">
+          </div>
+        </div>
+    
+        <img src="resources/EvilBorger.png" alt="McDonalds preview" class="w-full h-40 object-cover sm:h-48">
         <div class="p-4">
-          <h3 class="text-lg font-semibold">McDonald's Receipt Scanner</h3>
-          <p class="text-gray-600 text-sm sm:text-base">Working prototype of a bigger project for a corporate client.
+          <h3 class="text-lg font-semibold">McDonanld's Scanner</h3>
+          <p class="text-gray-600 text-sm sm:text-base">
+            A project for a corporate client - WIP and will be updated regularly.
           </p>
           <div class="mt-3 flex gap-3">
-            <a href="#" class="text-blue-600 hover:underline text-sm">Code</a>
-            <a href="#" class="text-blue-600 hover:underline text-sm">Try it!</a>
+            <a href="https://github.com/frankmstrocchio/portfolio/blob/main/mcdonalds.html" target="_blank"
+              class="text-blue-600 hover:underline text-sm">Code</a>
+            <a href="mcdonalds.html" target="_blank" class="text-blue-600 hover:underline text-sm">Try it!</a>
           </div>
         </div>
       </div>
-  </section>
-  <a>
+    </a>
 
     <!-- footer -->
     <footer class="text-center py-8 text-gray-500 text-sm mt-12">
