--- a/particle/particle.html
+++ b/particle/particle.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sabby</title>
+    <title>Particle Pool</title>
     <link rel="icon" href="./favicon.ico" type="image/x-icon" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/UAParser.js/1.0.37/ua-parser.min.js"></script>
     <script type="importmap">
@@ -140,7 +140,7 @@
       //setup workers
       simData.activeWorkers = WORKER_COUNT;
       for (let i = 0; i < WORKER_COUNT; i++) {
-        const worker = new Worker("./sabby/worker.js");
+        const worker = new Worker("./particle/worker.js");
         worker.addEventListener("message", onWorkerMessage);
         simData.workerPool.push(worker);
       }
