fixing my lil probelms god has put upon me as burdens for fun

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   <!-- project grid -->
   <section class="max-w-5xl mx-auto px-4 grid gap-6 sm:gap-8 sm:grid-cols-2 lg:grid-cols-3">
     <!-- String Thing card -->
-    <a href="particle.html" target="_blank" class="group relative block">
+    <a href="particle/particle.html" target="_blank" class="group relative block">
       <div
         class="relative bg-white rounded-2xl shadow-md overflow-hidden tilt transform transition duration-300 group-hover:scale-105 group-hover:shadow-xl">
 
@@ -80,7 +80,7 @@
           </div>
         </div>
 
-        <img src="resources/StringThing.png" alt="StringThing preview" class="w-full h-40 object-cover sm:h-48">
+        <img src="particle/StringThing.png" alt="StringThing preview" class="w-full h-40 object-cover sm:h-48">
         <div class="p-4">
           <h3 class="text-lg font-semibold">String Thing</h3>
           <p class="text-gray-600 text-sm sm:text-base">
@@ -89,16 +89,16 @@
             playing with this at work or you may get fired.
           </p>
           <div class="mt-3 flex gap-3">
-            <a href="https://github.com/frankmstrocchio/portfolio/blob/main/particle.html" target="_blank"
+            <a href="https://github.com/frankmstrocchio/portfolio/blob/main/particle/particle.html" target="_blank"
               class="text-blue-600 hover:underline text-sm">Code</a>
-            <a href="particle.html" target="_blank" class="text-blue-600 hover:underline text-sm">Try it!</a>
+            <a href="particle/particle.html" target="_blank" class="text-blue-600 hover:underline text-sm">Try it!</a>
           </div>
         </div>
       </div>
     </a>
 
     <!-- McDonalds card -->
-    <a href="mcdonalds.html" target="_blank" class="group relative block">
+    <a href="mcdondal/mcdonalds.html" target="_blank" class="group relative block">
       <div
         class="relative bg-white rounded-2xl shadow-md overflow-hidden tilt transform transition duration-300 group-hover:scale-105 group-hover:shadow-xl">
     
@@ -109,16 +109,16 @@
           </div>
         </div>
     
-        <img src="resources/EvilBorger.png" alt="McDonalds preview" class="w-full h-40 object-cover sm:h-48">
+        <img src="mcdondal/EvilBorger.png" alt="McDonalds preview" class="w-full h-40 object-cover sm:h-48">
         <div class="p-4">
           <h3 class="text-lg font-semibold">McDonanld's Scanner</h3>
           <p class="text-gray-600 text-sm sm:text-base">
             A project for a corporate client - WIP and will be updated regularly.
           </p>
           <div class="mt-3 flex gap-3">
-            <a href="https://github.com/frankmstrocchio/portfolio/blob/main/mcdonalds.html" target="_blank"
+            <a href="https://github.com/frankmstrocchio/portfolio/blob/main/mcdondal/mcdonalds.html" target="_blank"
               class="text-blue-600 hover:underline text-sm">Code</a>
-            <a href="mcdonalds.html" target="_blank" class="text-blue-600 hover:underline text-sm">Try it!</a>
+            <a href="mcdondal/mcdonalds.html" target="_blank" class="text-blue-600 hover:underline text-sm">Try it!</a>
           </div>
         </div>
       </div>
