added projects-grid reference from css file to section class for the project card grid

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   </section>
 
   <!-- project grid -->
-  <section class="max-w-5xl mx-auto px-4 grid gap-6 sm:gap-8 sm:grid-cols-2 lg:grid-cols-3">
+  <section class="projects-grid max-w-5xl mx-auto px-4">
     <!-- String Thing card -->
     <a href="particle/particle.html" target="_blank" class="group relative block">
       <div
